# jdwp-mcp

./: .gitignore  .mcp.json  Cargo.toml  README.md  test_breakpoint_event.sh
docs/: VARIABLE_INSPECTION_PLAN.md
examples/: README.md  observability-debugging.md  test_breakpoint.rs  test_connection.rs  test_find_class.rs  test_manual_stack.rs  test_stack_inspection.rs  test_string_values.rs  test_vm_commands.rs
jdwp-client/: Cargo.toml
jdwp-client/src/: commands.rs  connection.rs  eventloop.rs  eventrequest.rs  events.rs  lib.rs  method.rs  object.rs  protocol.rs  reader.rs  reftype.rs  stackframe.rs  string.rs  thread.rs  types.rs  vm.rs
mcp-server/: Cargo.toml
mcp-server/src/: handlers.rs  main.rs  protocol.rs  session.rs  tools.rs
