[package]
name = "jdwp-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[[bin]]
name = "jdwp-mcp"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
jdwp-client = { path = "../jdwp-client" }

[dev-dependencies]
tempfile = "3.8"
